# oneCodeEnv

./: .bashrc  .gitignore  .vimrc  .ycm_extra_conf.py  bak.tmux.conf  bashrc  install.py  powerline-shell.json  tmux.conf  vimrc  zimrc  zshrc
.vim/UltiSnips/: cpp.snippets
Documents/: cv_makefile  makefile
health/: close.py  day.sh
health/flux/: auto_flux.py  night.sh
install/: ccls.sh  ctags-universal.sh  flux.sh  gnome_commander.sh  gtags.sh  hotspot.sh  install_sublime_merge.sh  new_tmux.sh  notifyre_install.sh  powerline-shell.sh  protobuf.sh  tea_timer.sh  tmux.sh  tmux_18.04.sh  tmux_plugin_manager.sh  vim.sh  vim_16.04  vim_18.04  vim_20.04.sh  vim_9.0.sh  waydro.sh  zsh.sh
network/: jupy_tesla.sh  jupy_titan.sh
script/: Download_video_of_webpage.py  color_demo.vim  convert_video_to_audio.py  download_youtube.sh  install_ceres.sh  install_latest_cmake.sh  install_notify-osd.sh  install_nutstore.sh  install_workrave.sh  jupy_server.sh  list_dir_by_size.sh  remove_carriage_return.sh  rename_files.py  replace_in_files.sh  replace_std_pmr.py  run_rviz_docker.sh  set_git_proxy.sh  set_seq_of_proto_field.awk  ssh_reverse.sh  unset_git_proxy.sh
scripts/: ctag_cpp_stl.sh  cvPrj.sh  hello1.sh  hello2.sh  jupy_tesla.sh  leetcode.sh  mxnet.sh  sourceAll.sh  tags
shell/: env.sh
shell/func/: add_opencv3_lib.sh  (+7 more)
tmpl/: CMakeLists.txt  main.cpp  makefile
tmpl/leetcode/: main.cpp  run.sh  solution.hpp
tmpl/leetcode/test/: makefile  solution_unittest.cpp  test.sh
tmpl/nowcoder/: main.cpp  run.sh
vim/: .netrwhist  basic.vim  coc-settings.json  color.vim
(+14 files in other folders)
